--- a/T1.md
+++ b/T1.md
@@ -7,15 +7,14 @@ GET /products/{productId}/status?authToken=&recalculate=&owner=&region=
 ## Тест-кейс №1
 Получение статуса продукта при валидных значениях.
 ### Предусловия:
-1) Получить токен аутентификации и ввести его в QueryParameter {authToken} 
-2) Получить существующий productId 
-3) Выбрать эндпоинт /products/{productId}/status
-4) Выбрать метод GET
+* Пользователь авторизован и имеет действующий токен аутентификации.
+* Токен аутентификации получен и передан в параметр запроса {authToken}.
+* Существует валидный productId для тестирования.
 ### Шаги:
-* В поле recalculate ввести "true"
-* В поле owner ввести "Создатель"
-* В поле region ввести "Северо-Запад"
-* Нажать кнопку "Send"
+1) В параметре запроса recalculate установить значение "true"
+2) В параметре запроса owner установить значение "Создатель"
+3) В параметре запроса region установить значение "Северо-Запад".
+4) Отправить GET-запрос на эндпоинт /products/{productId}/status с указанными параметрами.
 ### Ожидаемый результат:
 HTTP-код = "200"\
 productStatus = "0" или "1"
@@ -23,16 +22,15 @@ productStatus = "0" или "1"
 ---
 
 ## Тест-кейс №2
-Получение статуса продукта при recalculate = null
+Получение статуса продукта при параметре recalculate = null
 ### Предусловия:
-1) Получить токен аутентификации и ввести его в QueryParameter {authToken}
-2) Получить существующий productId
-3) Выбрать эндпоинт /products/{productId}/status
-4) Выбрать метод GET
+* Пользователь авторизован и имеет действующий токен аутентификации.
+* Токен аутентификации получен и передан в параметр запроса {authToken}.
+* Существует валидный productId для тестирования.
 ### Шаги:
-* В поле recalculate ввести "null"
-* В поле owner ввести "Пользователь"
-* Нажать кнопку "Send"
+1) В параметре запроса recalculate установить значение "null"
+2) В параметре запроса owner установить значение "Пользователь"
+3) Отправить GET-запрос на эндпоинт /products/{productId}/status с указанными параметрами.
 ### Ожидаемый результат:
 HTTP-код = "200"\
 productStatus = "0" или "1"
@@ -40,16 +38,15 @@ productStatus = "0" или "1"
 ---
 
 ## Тест-кейс №3
-Получение статуса продукта при owner = null
+Получение статуса продукта при параметре owner = null
 ### Предусловия:
-1) Получить токен аутентификации и ввести его в QueryParameter {authToken}
-2) Получить существующий productId
-3) Выбрать эндпоинт /products/{productId}/status
-4) Выбрать метод GET
+* Пользователь авторизован и имеет действующий токен аутентификации.
+* Токен аутентификации получен и передан в параметр запроса {authToken}.
+* Существует валидный productId для тестирования.
 ### Шаги:
-* В поле owner ввести "null"
-* В поле region ввести "Сибирь"
-* Нажать кнопку "Send"
+1) В параметре запроса owner установить значение "null"
+2) В параметре запроса region установить значение "Сибирь"
+3) Отправить GET-запрос на эндпоинт /products/{productId}/status с указанными параметрами.
 ### Ожидаемый результат:
 HTTP-код = "200"\
 productStatus = "0" или "1"
@@ -57,16 +54,15 @@ productStatus = "0" или "1"
 ---
 
 ## Тест-кейс №4
-Получение статуса продукта при отсутствующем регионе
+Получение статуса продукта при отсутствующем параметре region
 ### Предусловия:
-1) Получить токен аутентификации и ввести его в QueryParameter {authToken}
-2) Получить существующий productId
-3) Выбрать эндпоинт /products/{productId}/status
-4) Выбрать метод GET
+* Пользователь авторизован и имеет действующий токен аутентификации.
+* Токен аутентификации получен и передан в параметр запроса {authToken}.
+* Существует валидный productId для тестирования.
 ### Шаги:
-* В поле recalculate ввести "false"
-* В поле owner ввести "Пользователь"
-* Нажать кнопку "Send"
+1) В параметре запроса recalculate установить значение "false"
+2) В параметре запроса owner установить значение "Пользователь"
+3) Отправить GET-запрос на эндпоинт /products/{productId}/status с указанными параметрами.
 ### Ожидаемый результат:
 HTTP-код = "200"\
 productStatus = "0" или "1"
@@ -74,14 +70,14 @@ productStatus = "0" или "1"
 ---
 
 ## Тест-кейс №5
-Получение статуса продукта при отсутствующих параметрах
+Получение статуса продукта при отсутствии всех необязательных параметров в запросе
+(recalculate, owner, region)
 ### Предусловия:
-1) Получить токен аутентификации и ввести его в QueryParameter {authToken}
-2) Получить заведомо НЕ существующий productId
-3) Выбрать эндпоинт /products/{productId}/status
-4) Выбрать метод GET
+* Пользователь авторизован и имеет действующий токен аутентификации.
+* Токен аутентификации получен и передан в параметр запроса {authToken}.
+* Существует валидный productId для тестирования.
 ### Шаги:
-* Нажать кнопку "Send"
+1) Отправить GET-запрос на эндпоинт /products/{productId}/status с указанными параметрами.
 ### Ожидаемый результат:
 HTTP-код = "200"\
 productStatus = "0" или "1"
@@ -89,56 +85,56 @@ productStatus = "0" или "1"
 ---
 
 ## Тест-кейс №6
-Получение ошибки 404 "Продукт не найден"
+Получение ошибки 404 "Продукт не найден" при не валидном productId в параметре запроса {productId} 
 ### Предусловия:
-1) Получить токен аутентификации и ввести его в QueryParameter {authToken}
-2) Получить заведомо НЕ существующий productId
-3) Выбрать эндпоинт /products/{productId}/status
-4) Выбрать метод GET
+* Пользователь авторизован и имеет действующий токен аутентификации.
+* Токен аутентификации получен и передан в параметр запроса {authToken}.
+* Существует заведомо НЕ валидный productId для тестирования.
 ### Шаги:
-* Нажать кнопку "Send"
+1) Отправить GET-запрос на эндпоинт /products/{productId}/status с указанными параметрами.
 ### Ожидаемый результат:
 HTTP-код = 404
 
 ---
 
 ## Тест-кейс №7
-Получение ошибки 401 "неверный или отсутствующий токен аутентификации authToken" при неверном токене
+Получение ошибки 401 "неверный или отсутствующий токен аутентификации authToken"\
+при передаче не валидного токена в параметр запроса {authToken}
 ### Предусловия:
-1) Ввести заведомо НЕ верный токен аутентификации authToken
-2) Получить существующий productId
-3) Выбрать эндпоинт /products/{productId}/status
-4) Выбрать метод GET
+* Пользователь имеет НЕ действующий токен аутентификации.
+* Заведомо не валидный токен аутентификации передан в параметр запроса {authToken}.
+* Существует валидный productId для тестирования.
 ### Шаги:
-* Нажать кнопку "Send"
+1) Отправить GET-запрос на эндпоинт /products/{productId}/status с указанными параметрами.
 ### Ожидаемый результат:
 HTTP-код = 401
 
 ---
 
 ## Тест-кейс №8
-Получение ошибки 401 "неверный или отсутствующий токен аутентификации authToken" при отсутствующем токене
+Получение ошибки 401 "неверный или отсутствующий токен аутентификации authToken"\
+при отсутствующем токене в параметре запроса {authToken}
 ### Предусловия:
-1) Поле токена аутентификации authToken оставить пустым
-2) Получить существующий productId
-3) Выбрать эндпоинт /products/{productId}/status
-4) Выбрать метод GET
+* Пользователь НЕ имеет токен аутентификации.
+* Существует валидный productId для тестирования.
 ### Шаги:
-* Нажать кнопку "Send"
+1) Отправить GET-запрос на эндпоинт /products/{productId}/status с указанными параметрами.
 ### Ожидаемый результат:
 HTTP-код = 401
 
 ---
 
 ## Тест-кейс №9
-Получение ошибки 500 со стороны сервера в формате json
+Получение ошибки 500 со стороны сервера и сообщения с телом в формате json\
+при передаче не валидного значения в параметр recalculate\
+(Integer значение в параметр с Boolean значением)
 ### Предусловия:
-1) Получить токен аутентификации и ввести его в QueryParameter {authToken}
-2) Выбрать эндпоинт /products/{productId}/status
-3) Выбрать метод GET
+* Пользователь авторизован и имеет действующий токен аутентификации.
+* Токен аутентификации получен и передан в параметр запроса {authToken}.
+* Существует валидный productId для тестирования.
 ### Шаги:
-* В поле recalculate ввести "1"
-* Нажать кнопку "Send"
+1) В параметре запроса recalculate установить значение "1"
+2) Отправить GET-запрос на эндпоинт /products/{productId}/status с указанными параметрами.
 ### Ожидаемый результат:
 HTTP-код = 500\
 Тело в формате json {"errorMessage":}
